manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactappdemo
  namespace: react-ns
  labels:
    app: reactappdemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reactappdemo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: reactappdemo
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - frontend
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: type
                operator: In
                values:
                - frontend
        podAntiAffinity: 
          preferredDuringSchedulingIgnoredDuringExecution: 
          - weight: 100  
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: security 
                  operator: In 
                  values:
                  - S2
              topologyKey: kubernetes.io/hostname
      containers:
      - name: reactappdemo
        image: portfolioreact.azurecr.io/reactdemo:0.1.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "frontend"
        effect: "NoSchedule"
      imagePullSecrets:
      - name: react-secret
