manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: reactappdemo
  namespace: react-ns
spec:
  selector:
    app: reactappdemo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
