manifests/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactappdemo
  namespace: react-ns
spec:
  rules:
  - host: portfolio.tarunchawla.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reactappdemo
            port:
              number: 80
