manifests/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: reactappdemo
  namespace: react-ns
spec:
  podSelector:
    matchLabels:
      app: reactappdemo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - to:
      - podSelector:
            matchLabels:
              app: reactappdemo
